--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
             </div>
+
+            <div class="destination" id="oklahoma">
+                <h2>Oklahoma</h2>
+            </div>
         </div>
     </div>
 
