--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <div class="destination" id="florida">
                 <h2>Florida</h2>
             </div>
+            
+            <div class="destination" id="LA">
+                <h2>LA</h2>
+            </div>
         </div>
     </div>
 
